# AmplifiedChickens

./: .env.example  .env.swp  .gitignore  Cargo.toml  LICENSE  README.md  build.sh  build_frontend.sh  run.sh  run_amped.sh  run_backend.sh
backend/: Cargo.toml  run_backend.sh
backend/migrations/: 20240110163234_schema.sql  20240112040115_squawk_test.sql
backend/src/: .model.rs.swp  .webpush.rs.swp  admin.rs  auth.rs  main.rs  model.rs  queue.rs  submit.rs  upload.rs  webpush.rs  ws.rs  ws_old.rs
common/: Cargo.toml
frontend/: .env.example  bun.lockb  index.html  package-lock.json  package.json  run_frontend.sh  tailwind.config.js  test.ts  vite.config.ts
frontend/src/: App.svelte  app.html  hooks.server.ts  main.ts  service-worker.js  stores.ts
frontend/src/lib/: stores.ts  swutil.ts  types.ts
frontend/src/lib/components/: Auto.svelte  AutoScouting.svelte  Carousel.svelte  Confirm.svelte  Header.svelte  HeheButton.svelte  ImageUpload.svelte  Lottery.svelte  MatchScoutHome.svelte  MatchScoutHomepage.svelte  MultipleThreeSelect.svelte  Navbar.svelte  NumberInput.svelte  Pie.svelte  Postmatch.svelte  Prematch.svelte  Rating.svelte  ScoutPercents.svelte  Stage.svelte  SubmitButton.svelte  TeamRole.svelte  TeamSummary.svelte  TeamsRemainingPopup.svelte  Tele.svelte  TextArea.svelte  TextInput.svelte  Threeoption.svelte  Toggle.svelte  Where.svelte  WhereAuto.svelte  toggle.svelte  where.svelte
frontend/src/lib/components/AdminDB/: AssignStudent.svelte  AssignStudentBlue.svelte  AssignStudentRed.svelte  DataShow.svelte  EventManagement.svelte  LastMatch.svelte  NumberScouted.svelte  QueueMatch.svelte  QueuedScouts.svelte  TeamMatches.svelte  UserManagement.svelte
frontend/src/lib/components/Combobox/: ComboBox.svelte  ComboBoxComponent.svelte  ComboBoxRed.svelte  Context.svelte
frontend/src/lib/stores/: homeStores.ts  matchStores.ts  pitStores.ts
frontend/src/routes/: +page.server.ts  +page.svelte
frontend/src/routes/app/: hooks.server.ts
frontend/src/routes/app/admin/: +page.server.ts  +page.svelte  hooks.server.ts
frontend/src/routes/app/home/: +page.server.ts  +page.svelte
frontend/src/routes/app/image/: +page.svelte
frontend/src/routes/app/manual_match/: +page.svelte
frontend/src/routes/app/match/: +page.server.ts  +page.svelte
frontend/src/routes/app/match/auto/: +page.svelte
frontend/src/routes/app/match/auto/components/: header.svelte  positioncheck.svelte  toggleleave.svelte
frontend/src/routes/app/match/postmatch/: +page.svelte
frontend/src/routes/app/match/postmatch/components/: broken.svelte  died.svelte  header.svelte  stage.svelte
frontend/src/routes/app/match/prematch/: +page.svelte
frontend/src/routes/app/match/prematch/components/: header.svelte  togglefielded.svelte
frontend/src/routes/app/match/tele/: +page.svelte
frontend/src/routes/app/match/tele/components/: header.svelte
frontend/src/routes/app/pit/: +page.server.ts  +page.svelte
frontend/src/routes/app/scout/: +page.server.ts  +page.svelte
frontend/src/routes/app/scout/[color]/: +page.server.ts  +page.svelte
frontend/src/routes/app/strategy/: +page.server.ts  +page.svelte
frontend/static/: manifest.json
