[package]
name = "squawk-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.2", features = ["ws", "multipart", "macros"] }
axum-extra = { version = "0.9.1", features = ["cookie-private"] }
axum-login = "0.12.0"
bimap = { version = "0.6.3", features = ["serde"] }
chrono = { version = "0.4.31", features = ["clock"] }
cookie = "0.18.0"
dotenv = "0.15.0"
hyper = "1.1.0"
hyper-tls = "0.6.0"
oauth2 = "4.4.2"
reqwest = "0.11.23"
rust-s3 = "0.33.0"
serde = "1.0.195"
serde_json = "1.0.111"
shuttle-secrets = "0.36.0"
shuttle-shared-db = { version = "0.36.0", features = ["postgres", "sqlx"] }
shuttle-static-folder = "0.28.0"
socketioxide = { version = "0.10.0", features = ["state"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "macros", "chrono"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
