[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["ws", "multipart", "macros", "tokio"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
chrono = { version = "0.4.34", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.30"
futures-core = "0.3.30"
http = "1.0.0"
image = "0.24.8"
jsonwebtoken = "9.2.0"
postgres = "0.19.7"
reqwest = { version = "0.11.23", features = ["json"] }
serde = "1.0.195"
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "macros", "chrono", "uuid", "postgres"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.6.1", features = ["v4"] }
